syntax = "proto2";

package com.berserkbentobox.coldwar;

import "Cost.proto";
import "Province.proto";
import "Technology.proto";
import "Policy.proto";
import "Superpower.proto";
//import "google/protobuf/descriptor.proto";

//extend google.protobuf.MessageOptions {
//  optional int32 pol_cost = 76000;
//  optional int32 mil_cost = 76001;
//  optional int32 cov_cost = 76002;
//}

// ========== Settings ==========

// The top-level settings proto included in GameSettings.
// Immutable over the duration of a single game.
// TODO: this should probably be empty, and have settings included from other parts.
message MoveSettings {
	optional Cost dia_dip_move_cost = 1;
	optional Cost dia_mil_move_cost = 2;
	optional Cost dia_cov_move_cost = 3;

	optional Cost fund_dissidents_move_cost = 101;
	optional Cost establish_base_move_cost = 102;
	optional Cost political_pressure_move_cost = 103;
	optional Cost coup_move_cost = 104;
	optional Cost military_action_move_cost = 105;

	optional Cost conflict_overt_fund_attacker_move_cost = 110;
	optional Cost conflict_overt_fund_defender_move_cost = 111;
  optional int32 coup_success_chance = 500;
  optional int32 coup_leader_chance = 501;
  optional int32 coup_backfire_chance = 502;

  optional int32 conflict_leader_modifier = 510;

  optional Cost deescalation_cost = 700;
}

message MoveList {
	repeated Move moves = 1;
}

//Proto variable names need to be VERBATIM same as message type
message Move {
	// Direct influence actions
	optional DiplomacyMove dia_dip_move = 1;
	optional MilitaryMove dia_mil_move = 2;
	optional CovertMove dia_cov_move = 3;

	optional FundDissidentsMove fund_dissidents_move = 101;
	optional EstablishBaseMove establish_base_move = 102;
	optional PoliticalPressureMove political_pressure_move = 103;
	optional CoupMove coup_move = 104;
	optional MilitaryActionMove military_action_move = 105;

	optional ConflictOvertFundAttackerMove conflict_overt_fund_attacker_move = 110;
	optional ConflictOvertFundDefenderMove conflict_overt_fund_defender_move = 111;
	
	optional ResearchMove research_move = 150;

	optional EnactPolicyMove enact_policy_move = 160;

	optional FoundCIAMove found_cia_move = 200;

	optional FoundKGBMove found_kgb_move = 300;

	optional FoundNATOMove found_nato_move = 1001;
	optional FoundPactMove found_pact_move = 1002;

	//Crises

	optional USSRBerlinBlockadeLiftBlockadeMove ussr_berlin_blockade_lift_blockade_move = 2001;
	optional USABerlinBlockadeAirliftMove usa_berlin_blockade_airlift_move = 2002;
}

// ========== DIRECT INFLUENCE ACTIONS ==========

// Influence by spending DIP points
message DiplomacyMove {
	optional Province.Id province_id = 1;
	optional int32 magnitude = 2;

//	option (pol_cost) = 1;
}

// Influence by spending MIL points
message MilitaryMove {
	optional Province.Id province_id = 1;
	optional int32 magnitude = 2;

//	option (mil_cost) = 1;
}

// Influence by spending COV points
message CovertMove {
	optional Province.Id province_id = 1;
	optional int32 magnitude = 2;

//	option (cov_cost) = 1;
}

// ========== TARGETED ACTIONS ==========

message FundDissidentsMove {
	optional Province.Id province_id = 1;

//	option (cov_cost) = 1;
}

message EstablishBaseMove {
	optional Province.Id province_id = 1;

//	option (mil_cost) = 2;
}

message PoliticalPressureMove {
	optional Province.Id province_id = 1;

//	option (pol_cost) = 2;
}

message CoupMove {
	optional Province.Id province_id = 1;
	optional int32 magnitude = 2;
}

// ========= CONFLICT ACTIONS ==========

message ConflictOvertFundAttackerMove {
	optional Province.Id province_id = 1;
}

message ConflictOvertFundDefenderMove {
	optional Province.Id province_id = 1;
}

message MilitaryActionMove {
	optional Province.Id province_id = 1;
}

// ===============TECHS=================

message ResearchMove {
	optional TechGroup.Id tech_id = 1;
	optional int32 magnitude = 2;
}

// ============USSR LEADERS=============

message SupportLeaderMove {
	optional UssrLeader.Id leader_id = 1;
	optional int32 magnitude = 2;
}

message SabotageLeaderMove {
	optional UssrLeader.Id leader_id = 1;
	optional int32 magnitude = 2;
}

// =============USA LEADERS=============

message PrimaryMove {
	optional UsaLeader.Id leader_id = 1;
}

// ========== SPECIAL ACTIONS ==========

message DeescalationMove {
}

message FoundNATOMove {
}

message FoundPactMove {
}

message FoundCIAMove {
}

message FoundKGBMove {
}

// =========== CRISES ==================

message USSRBerlinBlockadeLiftBlockadeMove {
}

message USABerlinBlockadeAirliftMove {
}